--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,8 +38,40 @@ section {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    opacity: 0;
 }
 
 .intro h1 {
     font-size: 50px;
+}
+
+.intro button, .match button {
+    width: 150px;
+    height: 50px;
+    background: none;
+    border: none;   
+    color: white;
+    font-size: 20px;
+    background-color: rgb(45, 117, 96);
+    border-radius: 20px;
+   
+}
+
+.match {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+
+.winner {
+    color: white;
+    text-align: center;
+}
+
+.hands, .options {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    column-gap: 5px;
 }
