--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,12 +8,12 @@
 
 section {
     height: 100vh;
-    background-color: slategray ;
+    background-color: white ;
     font-family: sans-serif;
 }
 
 .score {
-    color:#fff;
+    color: black;
     display:flex;
     height:20vh;
     justify-content: space-around;
@@ -30,16 +30,20 @@ section {
     padding: 10px;
     font-size: 25px;
 }
+
+
+
 /* Intro Screen */
 
 .intro {
-    color:#fff;
+    color: black;;
     height: 50vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    opacity: 0;
+    transition: opacity 0.5s ease 0.5s;
+    
 }
 
 .intro h1 {
@@ -67,7 +71,7 @@ section {
 }
 
 .winner {
-    color: white;
+    color: black;
     text-align: center;
 }
 
@@ -85,9 +89,11 @@ section {
 div.fadeOut {
     opacity: 0;
     pointer-events: none;
+    transition: opacity 0.7s ;
 }
 
 div.fadeIn {
     opacity: 1;
     pointer-events: all;
+    
 }
