--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -115,5 +115,20 @@ div.fadeIn {
     }
     35% {
       transform: rotateY(180deg) translateY(-50px);
-   }
-}
+    }
+    50% {
+      transform: rotateY(180deg) translateY(0px);
+    }
+    65% {
+      transform: rotateY(180deg) translateY(-50px);
+    }
+    75% {
+      transform: rotateY(180deg) translateY(0px);
+    }
+    85% {
+      transform: rotateY(180deg) translateY(-50px);
+    }
+    100% {
+      transform: rotateY(180deg) translateY(0px);
+    }
+  }
