--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,6 +103,9 @@ div.fadeIn {
     
 }
 
+/* Keyframe animation for player and computer hands */
+
+
 @keyframes shakePlayer {
     0% {
       transform: rotateY(180deg) translateY(0px);
@@ -130,5 +133,35 @@ div.fadeIn {
     }
     100% {
       transform: rotateY(180deg) translateY(0px);
+    }
+  }
+
+  @keyframes shakeComputer {
+    0% {
+      transform: translateY(0px);
+    }
+    15% {
+      transform: translateY(-50px);
+    }
+    25% {
+      transform: translateY(0px);
+    }
+    35% {
+      transform: translateY(-50px);
+    }
+    50% {
+      transform: translateY(0px);
+    }
+    65% {
+      transform: translateY(-50px);
+    }
+    75% {
+      transform: translateY(0px);
+    }
+    85% {
+      transform: translateY(-50px);
+    }
+    100% {
+      transform: translateY(0px);
     }
   }
