--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,8 +106,30 @@ div.fadeIn {
 
 /* Tutorial Pop up */
 
+.popUp {
+  padding: 10px 15px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 1px solid black;
+  border-radius: 10px;
+  font-family: sans-serif;
+  font-size: large;
+  z-index: 10;
+  background-color: rgb(252, 255, 254);
+  width:fit-content;
+  max-width: 70%;
 
+}
 
+.popup-Header {
+  padding: 10px 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid black;
+}
 
 /* Keyframe animation for player and computer hands */
 
