--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,7 +107,6 @@ div.fadeIn {
 /* Tutorial Pop up */
 
 .popUp {
-  padding: 10px 15px;
   position: fixed;
   top: 50%;
   left: 50%;
@@ -129,6 +128,35 @@ div.fadeIn {
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid black;
+}
+
+.popup-Header .title {
+  font-size: 1.25rem;
+  font-weight: bold;
+}
+
+.popup-Header .close-button {
+  cursor: pointer;
+  border: none;
+  outline: none;
+  background: none;
+  font-size: 1.25rem;
+  font-weight: bold;
+}
+
+.popup-Body {
+  padding: 10px 15px;
+}
+
+#overlay {
+  position: fixed;
+  /*opacity: 0;*/
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.5);
+  pointer-events: none;
 }
 
 /* Keyframe animation for player and computer hands */
