--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,24 +105,29 @@ div.fadeIn {
 
 
 /* Tutorial Pop up */
-
-.popUp {
+.modal {
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(0);
+  transition: 200ms ease-in-out;
   border: 1px solid black;
   border-radius: 10px;
+  z-index: 10;
+  background-color: white;
+  width: 500px;
+  max-width: 80%;
   font-family: sans-serif;
   font-size: large;
-  z-index: 10;
-  background-color: rgb(252, 255, 254);
-  width:fit-content;
-  max-width: 70%;
-
+  padding: 10px 15px;
+  border-radius: 15px ;
 }
 
-.popup-Header {
+.modal.active {
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.modal-header {
   padding: 10px 15px;
   display: flex;
   justify-content: space-between;
@@ -130,12 +135,12 @@ div.fadeIn {
   border-bottom: 1px solid black;
 }
 
-.popup-Header .title {
+.modal-header .title {
   font-size: 1.25rem;
   font-weight: bold;
 }
 
-.popup-Header .close-button {
+.modal-header .close-button {
   cursor: pointer;
   border: none;
   outline: none;
@@ -144,19 +149,25 @@ div.fadeIn {
   font-weight: bold;
 }
 
-.popup-Body {
+.modal-body {
   padding: 10px 15px;
 }
 
 #overlay {
   position: fixed;
-  /*opacity: 0;*/
+  opacity: 0;
+  transition: 200ms ease-in-out;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0, 0, 0, .5);
   pointer-events: none;
+}
+
+#overlay.active {
+  opacity: 1;
+  pointer-events: all;
 }
 
 /* Keyframe animation for player and computer hands */
