--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,8 +119,8 @@ div.fadeIn {
   max-width: 80%;
   font-family: sans-serif;
   font-size: large;
-  padding: 10px 15px;
   border-radius: 15px ;
+  padding: 5px;
 }
 
 .modal.active {
@@ -170,6 +170,10 @@ div.fadeIn {
   pointer-events: all;
 }
 
+.modal-body > h2 {
+text-decoration: underline;
+padding:5px;
+}
 /* Keyframe animation for player and computer hands */
 
 
