--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,25 @@
 
 /* Main game styling (scoreboard) */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+html {
+  height: 100%;
 }
 
-section {
+body {
+  margin: 0;
+  padding: 0;
+  min-height: 100vh; 
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  flex: 1;
+  padding: 20px;
+}
+
+
+
+main {
     height: 100vh;
     background-color: white ;
     font-family: sans-serif;
@@ -31,6 +44,7 @@ section {
     font-size: 25px;
 }
 
+.rounds-played {}
 
 
 /* Intro Screen */
