--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,10 @@ main {
     font-size: 25px;
 }
 
-.rounds-played {}
+.rounds-played {
+  display: flex;
+
+}
 
 
 /* Intro Screen */
@@ -129,12 +132,13 @@ div.fadeIn {
   border-radius: 10px;
   z-index: 10;
   background-color: white;
-  width: 500px;
+  width: 250rem;
   max-width: 80%;
+  max-height: 80%;
   font-family: sans-serif;
-  font-size: large;
+  font-size: medium;
   border-radius: 15px ;
-  padding: 5px;
+  padding: 30px;
 }
 
 .modal.active {
