--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,10 @@ body {
   padding: 20px;
 }
 
-
+.header {
+  display: flex;
+  justify-content: center;
+}
 
 main {
     height: 100vh;
@@ -71,8 +74,8 @@ img {
     font-size: 50px;
 }
 
-.intro button, .match button {
-    width: 150px;
+.intro button, .match button, .tutorial-btn, .reset-btn {
+    width: 100px;
     height: 50px;
     background: none;
     border: none;   
@@ -80,8 +83,9 @@ img {
     font-size: 20px;
     background-color: rgb(45, 117, 96);
     border-radius: 20px;
+    border-spacing: 15px;
     cursor: pointer;
-   
+
 }
 
 .match {
@@ -192,6 +196,12 @@ div.fadeIn {
 text-decoration: underline;
 padding:5px;
 }
+
+/* Reset button */
+.reset-btn {
+
+}
+
 /* Keyframe animation for player and computer hands */
 
 
