--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-
 /* Main game styling (scoreboard) */
 html {
   height: 100%;
@@ -12,6 +11,13 @@ body {
   flex-direction: column;
 }
 
+/* main {
+} */
+
+footer {
+  text-align: center;
+}
+
 .content {
   flex: 1;
   padding: 20px;
@@ -23,7 +29,8 @@ body {
 }
 
 main {
-    height: 100vh;
+  flex: 1 0 auto !important;
+    /* height: 100vh; */
     background-color: white ;
     font-family: sans-serif;
 }
@@ -34,6 +41,8 @@ main {
     height:20vh;
     justify-content: space-around;
     align-items: center;
+    opacity: 0;
+    display: none;
 }
 
 .score h2 {
@@ -57,7 +66,7 @@ main {
 
 .intro {
     color: black;;
-    height: 50vh;
+    /* height: 50vh; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -91,10 +100,15 @@ img {
 }
 
 .match {
-    position: absolute;
+    /* position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%); */
+    display: none;
+    opacity: 0;
+    width: 80vw;
+    min-height: 50vh;
+    margin: 0 auto;
 }
 
 .winner {
@@ -134,9 +148,15 @@ div.fadeOut {
 div.fadeIn {
     opacity: 1;
     pointer-events: all;
-    
+    transition: opacity 0.7s ;    
 }
 
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 /* Tutorial Pop up */
 .modal {
