--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,11 +11,9 @@ body {
   flex-direction: column;
 }
 
-/* main {
-} */
-
 footer {
   text-align: center;
+  background-color: rgb(2, green, blue);
 }
 
 .content {
@@ -26,20 +24,20 @@ footer {
 .header {
   display: flex;
   justify-content: center;
+  font-family: sans-serif;
 }
 
 main {
   flex: 1 0 auto !important;
-    /* height: 100vh; */
-    background-color: white ;
-    font-family: sans-serif;
+  background-color: white ;
+  font-family: sans-serif;
 }
 
 .score {
     color: black;
     display:flex;
     height:20vh;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     opacity: 0;
     display: none;
@@ -47,6 +45,7 @@ main {
 
 .score h2 {
     font-size: 35px;
+    font-family: sans-serif;
 
 }
 
@@ -66,13 +65,12 @@ main {
 
 .intro {
     color: black;;
-    /* height: 50vh; */
+    
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
     transition: opacity 0.5s ease 0.5s;
-    
 }
 
 img {
@@ -94,16 +92,11 @@ img {
     font-size: 20px;
     background-color: rgb(45, 117, 96);
     border-radius: 20px;
-    border-spacing: 15px;
     cursor: pointer;
-
+    margin: 5px;
 }
 
 .match {
-    /* position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%); */
     display: none;
     opacity: 0;
     width: 80vw;
@@ -118,7 +111,7 @@ img {
 
 .hands, .options {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
     column-gap: 5px;
 }
@@ -303,7 +296,7 @@ padding:5px;
 /* Media query for screens with a maximum width of 768px (e.g., tablets) */
 @media (max-width: 768px) {
   img {
-    width:200px
+    width:200px;
 
   }
 }
