--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,6 +151,10 @@ div.fadeIn {
   align-items: center;
 }
 
+footer {
+  font-family: sans-serif;
+  font-size: medium;
+}
 /* Tutorial Pop up */
 .modal {
   position: fixed;
