--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
 
 footer {
   text-align: center;
-  background-color: rgb(2, green, blue);
+
 }
 
 .content {
@@ -57,17 +57,11 @@ main {
     font-size: 25px;
 }
 
-.rounds-played {
-  display: flex;
-
-}
-
 
 /* Intro Screen */
 
 .intro {
-    color: black;;
-    
+    color: black;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -416,9 +410,7 @@ padding:5px;
   img {
     width: 180px;
   }
-  .modal-body > h2 {
-    font-size: px;
-  }
+
   li {
     font-size: 9px;
   }
