--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,7 @@ main {
     font-size: 40px;
 }
 
-.intro button, .match button, .tutorial-btn, .reset-btn  {
+.intro button, .match button, .tutorial-btn, .reset-btn, #mute  {
     width: 100px;
     height: 50px;
     background: none;
@@ -141,6 +141,14 @@ div.fadeIn {
     transition: opacity 0.7s ;    
 }
 
+#mute {
+  position: absolute;
+  left: 5px;
+  flex-wrap: wrap;
+  bottom:30px;
+  
+  
+}
 
 .buttons {
   display: flex;
